Umgestellt auf java 21 und virtual threads